--- a/style.css
+++ b/style.css
@@ -116,6 +116,10 @@ p {
     width: 500px;
     height: 100px;
     border: 5px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.7rem;
 }
 
 .button-two {
@@ -126,3 +130,4 @@ p {
     padding: 1rem 1.5rem;
     font-size: 1.4rem;
 }
+
