--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-image: url(background.jpg);
 }
 img,
 picture,
@@ -168,3 +169,17 @@ p {
   padding: 30px 45px 30px 45px;
 }
 
+.rock {
+    width: 5%;
+    height: auto;
+}
+
+.scissors {
+    width: 5%;
+    height: auto;
+}
+
+.paper {
+    width: 5%;
+    height: auto;
+}
